# Memium

./: .cookiecutter.json  .cruft.json  .dockerignore  .gitignore  .gitignore.rej  .testmondata  CHANGELOG.md  Dockerfile  Dockerfile.dev  Makefile  ankiconnect_mnemonic_medium.sh  coverage.xml  dev-requirements.txt  docker_cmd.sh  docker_smoketest.sh  dodo.py  git.py  integator.toml  main.py  makefile  mise.toml  pyproject.toml  pyproject.toml.rej  pytest.ini  readme.md  renovate.json  requirements.txt  str_parsing.py  tasks.py  test.py  test_file.txt  test_package  update_mnemonic_medium.sh  vulture_whitelist.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md  recommended_repo_setup.md  recommended_repo_setup.md.rej
.github/workflows/: build_prod.yml  check_for_rej.yml  codecov.yml  cruft.yml  docker-deploy.yml  docker-publish.yml  docker_integration_test.yml  docker_smoketest.yml  pre-commit.yml  python-app.yml  release.yml  release.yml.rej  smoketests.yml  stalebot.yml  static_type_checks.yml  tests.yml  validate.yml
.smoketest_dir/: test.md
application/: cli.py  main.py
docs/: conf.py  faq.md  index.md  installation.md  tutorials.md
docs/api/: docs_example.md
memium/: __main__.py  cli.py  core.py  diff_determiner.py  environment.py  main.py  test_cli.py  test_diff_determiner.py  test_main.py
memium/data_access/: test_ankiconnect_gateway.py
memium/destination/: destination.py  destination_ankiconnect.py  destination_commands.py  destination_dryrun.py  test_destination_ankiconnect.py
memium/destination/ankiconnect/: TODO.md  anki_card.py  anki_cloze.py  anki_converter.py  anki_formatter.py  anki_gateway.py  anki_model.py  anki_prompt.py  anki_prompt_cloze.py  anki_prompt_qa.py  anki_qa.py  ankiconnect_gateway.py  ankiconnect_requester.py  card_store.py  default_styling.css  note_store.py  syncer.py  test_anki_converter.py  test_anki_prompt_qa.py  test_ankiconnect_gateway.py  test_card_store.py  test_note_store.py  test_styling.html
memium/post_processing/: obsidian.py
memium/raw_processors/: categorise_swe.py  categoriser.py  test_categories_swe.py  test_title_as_answer.py  title_as_answer.py
memium/source/: document.py  document_ingester.py  document_source.py  prompt.py  prompt_source.py  source.py  test_document_source.py  test_facade.py  test_prompt_qa.py  test_prompt_source.py
memium/source/extractors/: extractor.py  extractor_cloze.py  extractor_definition.py  extractor_qa.py  extractor_table.py  extractor_title_as_answer.py  test_extractor_definition.py  test_extractor_table.py  test_prompt.py  test_prompt_extractor_cloze.py  test_prompt_extractor_qa.py  test_title_as_answer.py  to_line_blocks.py
memium/source/prompts/: prompt.py  prompt_cloze.py  prompt_from_doc.py  prompt_from_doc_test.py  prompt_qa.py  test_prompt_qa.py
memium/source/transformers/: question_rephraser.py  question_rephraser_test.py
memium/str_utils/: cleaner.py  hasher.py  term_extractor.py
memium/subtasks/: github.py  graphite.py  smoketest.py
memium/tasks/: github.py  graphite.py  smoketest.py  str_parsing.py
memium/utils/: clean_str.py  code_block.md  disk_cache.py  extract_terms.py  get_wikilinks_from_string.py  hash_cleaned_str.py  markdown.py  markdown_parser.py  test_extract_terms.py  test_get_wikilinks_from_string.py  test_hash_cleaned_str.py  test_markdown.py  test_markdown_parser.py
memium/utils/__snapshots__/: test_markdown_parser.ambr
personal_mnemonic_medium/: card_pipeline.py  cli.py  diff_determiner.py  main.py  primary.py  requirements.txt  sync.py  sync_deck.py  test_diff_determiner.py  test_main.py  test_sync_deck.py  update_mnemonic_medium.sh
personal_mnemonic_medium/data_access/: ankiconnect_gateway.py  environment.py  test_ankiconnect.py  test_ankiconnect_gateway.py
personal_mnemonic_medium/data_access/document_ingesters/: base.py  document.py  markdown_ingester.py  test_markdown_ingester.py  test_uuid_handling.py  uuid_handling.py
personal_mnemonic_medium/data_access/exporters/: base.py
personal_mnemonic_medium/data_layer/document_ingesters/: base.py  markdown_ingester.py
personal_mnemonic_medium/destination/: anki_prompt_cloze.py  anki_prompt_qa.py  ankiconnect_converter.py  destination_ankiconnect.py  destination_base.py  destination_commands.py  dryrun.py  test_ankiconnect_converter.py  test_destination_ankiconnect.py
personal_mnemonic_medium/destination/ankiconnect/: anki_converter.py  anki_prompt_cloze.py  test_anki_converter.py
personal_mnemonic_medium/domain/: card_pipeline.py  markdown_to_html.py
personal_mnemonic_medium/note_factories/: markdown.py
personal_mnemonic_medium/presentation/: cli.py
personal_mnemonic_medium/prompt_extractors/: base.py  prompt.py
personal_mnemonic_medium/source/: document.py  document_ingester.py  extractor_base.py  extractor_cloze.py  extractor_qa.py  facade.py  facade_base.py  facade_document.py  ingester_fake.py  ingester_markdown.py  prompt_cloze.py  prompt_qa.py  test_document_ingester.py  test_ingester_markdown.py  test_prompt_extractor_cloze.py  test_prompt_extractor_qa.py  test_source_document.py
personal_mnemonic_medium/subtasks/: github.py  graphite.py  str_parsing.py
personal_mnemonic_medium/tests/: docker_smoketest.sh  general_test.py  integration_test.sh
personal_mnemonic_medium/utils/: hash_cleaned_str.py  test_hash_cleaned_str.py
personal_mnemonic_medium/v2/: main.py  sync_deck.py  test_sync_deck.py
src/personal_mnemonic_medium/: __init__.py.rej  card_pipeline.py  globals.py  markdown_to_ankicard.py  sync.py  update_mnemonic_medium.sh
subtasks/: github.py
tasks/: git.py  github.py  str_parsing.py
tests/: Bensår.md  general_test.py  integration_test.sh  test.md
tests/extractors/: test_markdown_extractor.py
tests/note_factories/: test_markdown_extractor.py
tests/prompt_extractors/: test_cloze_extractor.py  test_qa_prompt_extractor.py
tests/single_file_test_folder/: test_hash.md
tests/test_md_files/: Bensår.md  test_card_guid.md  test_header_removal.md  test_newlines_in_lists.md
(+140 files in other folders)
