[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "memium"
version = "0.14.3"
authors = [{ name = "Martin Bernstorff", email = "martinbernstorff@gmail.com" }]
description = "Memium"
classifiers = ["Programming Language :: Python :: 3.11"]
requires-python = ">=3.11"

# TODO: https://github.com/MartinBernstorff/memium/issues/260 Setup dependabot automerge
dependencies = [
  "cffi==1.16.0",
  "iterpy==0.22.0",
  "genanki==0.13.1",
  "markdown==3.5.2",
  "pydantic==2.6.1",
  "sentry-sdk==1.40.1",
  "typer==0.9.0",
  "tqdm==4.66.1",
  "unidecode==1.3.8",
  "wasabi==1.1.2",
  "bs4==0.0.1",
]

[project.license]
file = "LICENSE"

[project.readme]
file = "readme.md"
content-type = "text/markdown"

[project.scripts]
memium = "memium.__main__:app"

[project.optional-dependencies]
tests = [
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-xdist==3.5.0",
  "pytest-sugar==1.0.0",
  "pytest-testmon==2.1.0",
  "diff-cover==8.0.2",
]
dev = [
  "cruft==2.15.0",
  "herbarium",
  "invoke==2.2.0",
  "pyright==1.1.350",
  "pre-commit==3.6.0",
  "ruff==0.2.1",
  "lumberman",
]

[project.urls]
homepage = "https://github.com/MartinBernstorff/memium"
repository = "https://github.com/MartinBernstorff/memium"
documentation = "https://MartinBernstorff.github.io/memium/"

[tool.pyright]
exclude = [".*venv*", "*subtasks*", ".git", "build"]
pythonPlatform = "Darwin"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
typeCheckingMode = "strict"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "C90",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W",
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F841",
  "RET504",
  "COM812",
  "COM819",
  "W191",
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  "docs/conf.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.isort]
known-third-party = ["wandb"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  # Ignore lines containing '...'
  ".*[.]{3}.*",
]
omit = ["test_*.py"]
